feat: fluent window component created

--- a/libs/morajlab.fluent-app-ui-kit/icon/icon.docs.mdx
+++ b/libs/morajlab.fluent-app-ui-kit/icon/icon.docs.mdx
@@ -3,7 +3,7 @@ labels: ['react', 'typescript', 'icon', 'fluent', 'ui', 'kit']
 description: 'A Icon component.'
 ---
 
-import { Icon } from './icon';
+import { Icon } from '.';
 
 Icon example:
 
