--- a/libs/morajlab.fluent-app-ui-kit/titlebar/titlebar.docs.mdx
+++ b/libs/morajlab.fluent-app-ui-kit/titlebar/titlebar.docs.mdx
@@ -3,7 +3,7 @@ labels: ['react', 'typescript', 'titlebar']
 description: 'A Titlebar component.'
 ---
 
-import { Titlebar } from './titlebar';
+import { Titlebar } from '.';
 
 Titlebar example:
 
