chore: morajlab.fluent-app-ui-kit updated

--- a/libs/morajlab.fluent-app-ui-kit/checkable-contextual-menu/checkable-contextual-menu.docs.mdx
+++ b/libs/morajlab.fluent-app-ui-kit/checkable-contextual-menu/checkable-contextual-menu.docs.mdx
@@ -3,7 +3,7 @@ labels: ['react', 'typescript', 'checkable-contextual-menu']
 description: 'A CheckableContextualMenu component.'
 ---
 
-import { CheckableContextualMenu } from './checkable-contextual-menu';
+import { CheckableContextualMenu } from '.';
 
 CheckableContextualMenu example:
 
