--- a/libs/morajlab.fluent-app-ui-kit/titlebar/titlebar.docs.mdx
+++ b/libs/morajlab.fluent-app-ui-kit/titlebar/titlebar.docs.mdx
@@ -3,7 +3,7 @@ labels: ['react', 'typescript', 'titlebar']
 description: 'A Titlebar component.'
 ---
 
-import { Titlebar } from '.';
+import { TitleBar } from '.';
 
 Titlebar example:
 
@@ -11,11 +11,11 @@ A simple Titlebar component with some text
 
 Code Snippet:
 ```js
-<Titlebar>hello from Titlebar</Titlebar>
+<TitleBar>hello from Titlebar</TitleBar>
 ```
 
 
 Live Playground:
 ```js live
-<Titlebar>hello from Titlebar</Titlebar>
+<TitleBar>hello from Titlebar</TitleBar>
 ```
