--- a/libs/morajlab.fluent-app-ui-kit/window/window.docs.mdx
+++ b/libs/morajlab.fluent-app-ui-kit/window/window.docs.mdx
@@ -3,7 +3,7 @@ labels: ['react', 'typescript', 'window']
 description: 'A Window component.'
 ---
 
-import { Window } from './window';
+import { Window } from '.';
 
 Window example:
 
@@ -11,11 +11,11 @@ A simple Window component with some text
 
 Code Snippet:
 ```js
-<Window text="hello from Window" />
+<Window/>
 ```
 
 
 Live Playground:
 ```js live
-<Window text="hello from Window" />
+<Window/>
 ```
